Mon Feb 14 18:24:19 2005  Steve Huston  <shuston@riverace.com>

	* ace/OS_TLI.inl: Added "namespace ACE_OS" around all the methods,
	  instead of prepending ACE_OS to the names. This continues some
	  similar changes, such as to OS_NS_signal.inl.

	* apps/JAWS3/jaws3/Asynch_IO.h:
	* apps/JAWS3/jaws3/Asynch_IO_Helpers.h:
	* apps/JAWS3/jaws3/Concurrency_T.h:
	* apps/JAWS3/jaws3/Event_Dispatcher.h:
	* apps/JAWS3/jaws3/Options.h:
	* apps/JAWS3/jaws3/Reactive_IO.h:
	* apps/JAWS3/jaws3/Reactive_IO_Helpers.h:
	* apps/JAWS3/jaws3/Signal_Task.h:
	* apps/JAWS3/jaws3/Synch_IO.h:
	  Removed #include "ace/OS.h", replacing with other #includes
	  as needed. If OS.h is included, some other OS_*.h files can get
	  pulled in and sometimes ends up tentatively defining structs in
	  ACE_OS's namespace. This can end up tripping HP-UX aCC. Not sure
	  why it's only aCC and not other compilers as well, but there it is.
	  Finally resolves some nagging compile errors on HP-UX.

	* apps/JAWS3/jaws3/Concurrency.cpp:
	* apps/JAWS3/jaws3/IO.cpp: Add missing OS_NS_* defines
	  necessitated by no longer including OS.h.

Mon Feb 14 17:36:43 2005  Steve Huston  <shuston@riverace.com>

	* ace/ace.mwc: Removed RMCast and TMCast, since they're now under
	  protocols/ace.

	* ace/Makefile.am:
	* protocols/ace/Makefile.am: Moved RMCast and TMCast entries from
	  the former to the latter.

Mon Feb 14 17:03:11 2005  Steve Huston  <shuston@riverace.com>

	* ace/RMCast/Acknowledge.cpp:
	* ace/RMCast/Acknowledge.h:
	* ace/RMCast/Agent.tar.bz2:
	* ace/RMCast/Bits.h:
	* ace/RMCast/Link.cpp:
	* ace/RMCast/Link.h:
	* ace/RMCast/Protocol.cpp:
	* ace/RMCast/Protocol.h:
	* ace/RMCast/RMCast.mpc:
	* ace/RMCast/Retransmit.cpp:
	* ace/RMCast/Retransmit.h:
	* ace/RMCast/Simulator.cpp:
	* ace/RMCast/Simulator.h:
	* ace/RMCast/Socket.cpp:
	* ace/RMCast/Socket.h:
	* ace/RMCast/Stack.cpp:
	* ace/RMCast/Stack.h:
	  Moved from ace/RMCast to protocols/ace/RMCast.

	* ace/TMCast/ACE_TMCast.pc.in:
	* ace/TMCast/Export.hpp: