@@ -10,8 +10,8 @@
 
 #include <ace/Thread_Manager.h>
 
-#include <ace/RMCast/Stack.h>
-#include <ace/RMCast/Protocol.h>
+#include "Stack.h"
+#include "Protocol.h"
 
 namespace ACE_RMCast
 {
