@@ -2,7 +2,7 @@
 // author    : Boris Kolpackov <boris@kolpackov.net>
 // cvs-id    : $Id$
 
-#include <ace/RMCast/Simulator.h>
+#include "Simulator.h"
 
 namespace ACE_RMCast
 {
