@@ -2,7 +2,7 @@
 // author    : Boris Kolpackov <boris@kolpackov.net>
 // cvs-id    : $Id$
 
-#include <ace/RMCast/Stack.h>
+#include "Stack.h"
 
 namespace ACE_RMCast
 {
